Before consolidation of calculation part